
    Add Mac OS X port from Clif Redding.  Tested with Darwin 8.10.1 and
    Mac OS X 10.4.10, but hopefully will work with other versions.

    Update the LDAP check to do something more reasonable.  The old LDAP
    plugin probably never worked, at least with OpenLDAP.  Thanks to
    Quanah Gibson-Mount for the fixes.

    Check for inet_aton in libresolv for older versions of Solaris.

lbcd 3.3.0 (2006-10-06)

    Add the -S option, which says to return load and user information
    unmolested when replying to version two queries rather than setting
    all of the loads to the calculated weight of the first service and
    zeroing the user information.

    Fix user handling on Linux.  Due to an invalid utmp path, a logic
    error in caching user login results, and an incorrect path for the
    console, all the user numbers on Linux were always zero prior to this
    fix.

    Add considerably better documentation on what weight the default load
    service calculates, including its various adjustments based on the
    number of logged-in users.

    In lbcdclient, don't send a one-byte packet to the server before
    sending the real query.

lbcd 3.2.6 (2006-05-16)

    When building from a different build directory than the source
    directory, the makefile built and looked for the man pages in the
    wrong path.  Look for and build man pages in the source directory.

lbcd 3.2.5 (2006-04-10)

    Fixed a misuse of the third argument to waitpid that was causing use
    of a command to generate weights to fail on some platforms.

lbcd 3.2.4 (2006-03-17)

    Document lbcd's behavior on hosts with multiple addresses and the use
    of -b and running multiple instances of lbcd to ensure that replies
    go out from the right source address.  Unfortunately, the design of
    the Unix UDP API makes it more difficult than it's worth to try to
    reply to incoming packets with the source address of the interface on
    which they were received.
